--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     
   </head>
   <body>
-   
+   <div class="container">
+    <div class="sidebar">
+      This is the Sidebar
+
+    </div>
+   </div>
  
     
-  
+   This is some placeholder text
   </body>
 </html>
 
