layout for portfolio area mostly complete; copyright line added; topbar added; overall spacing complete

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 
     <div class="container">
+
+      <div class="row topbar">
+      </div>
       
       <div class="row project-box-holder">
         <div class="col-md-2 well project-box">
@@ -40,7 +43,9 @@
 
 
 
-
+      <div class="copyright">
+        <h1>Copyright Christopher Huber 2020, All Rights Reserved.</h1>
+      </div>
  
  
     </div><!--Container-->
