got copyright text to appear within the bottom spacer bar

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
 
       <div class="row" id="topbar">
-        <p><span>Portfolio</span></p>
+        <p><span><strong>Portfolio</strong></span></p>
       </div>
       
       <div class="row spacer-bar" id="top">
@@ -61,8 +61,8 @@
         </div>
       </div> 
       
-      <div class="row spacer-bar" id="bottom">  
-        <span>Copyright Christopher Huber 2020, All Rights Reserved.</span>
+      <div class="row spacer-bar" id="bottom">
+        <p><em>Copyright Christopher Huber 2020</em></p>  
       </div>
 
  
