--- a/index.html
+++ b/index.html
@@ -87,28 +87,24 @@
           <h3>ProC Gene Duping</h3>
           <div class="underline-bar"></div>
           <ul>
-            <li>Field/Skills(s):</li>
-            <li>Function:</li>
-            <li>Purpose:</li>
-            <li>Known Bugs:</li>
-            <li>Being Supported:</li>
+            <li>Field/Skills(s): Molecular Bio, Bioinformatics, Project Management, WetLab</li>
+            <li>Purpose: Teach Project Design & Management; investigate & explain high ProC gene copy # in A. tumefaciens</li>
+            <li>Publication: [pending]</li>
           </ul>
-          <p><a href="https://github.com/CHuber42/Title-9-Webscraper-commissioned-"><em>LINK</em></a></p>
+          <p><a href="https://drive.google.com/drive/u/0/folders/0B3AOkJgzSUlITkpLb1RhMlgySHc"><em>LINK</em></a></p>
         </div>
         <div class="col-md-2 well project-box">
-          <h3>PROJECT NAME</h3>
+          <h3>Astrolabe</h3>
           <div class="underline-bar"></div>
           <ul>
-            <li>Field/Skills(s):</li>
-            <li>Function:</li>
-            <li>Purpose:</li>
-            <li>Known Bugs:</li>
-            <li>Being Supported:</li>
+            <li>Field/Skills(s): Metalworking/Metal Arts</li>
+            <li>Function: Final Project in Metal Arts class</li>
+            <li>Purpose: Overcome perfectionism; Accept "amazing" over "perfect"</li>
           </ul>
-          <p><a href="https://github.com/CHuber42/Title-9-Webscraper-commissioned-"><em>LINK</em></a></p>
+          <p><a href="https://www.facebook.com/Kazmar/media_set?set=a.10206054793275436&type=3"><em>LINK</em></a></p>
         </div>
         <div class="col-md-2 well project-box">
-          <h3>PROJECT NAME</h3>
+          <h3>TBD</h3>
           <div class="underline-bar"></div>
           <ul>
             <li>Field/Skills(s):</li>
