added some description to hobbies

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
           <p>Contact</p>
         </div>
       </a>
+
+        <div class="row quotebar">
+          <p>"The beginning of wisdom is the statement 'I do not know'. The person who cannot make that statement is one who will never learn anything."</p>
+          <footer>Keith R.A. DeCandido</footer>
+        </div>
     </div>
 
 
