lots of formatting/aligning things, accounting for things cascading down unintentionally into new elements

--- a/education.html
+++ b/education.html
@@ -42,8 +42,8 @@
       </a>
      
       <div class="row quotebar">
-        <p>"The beginning of wisdom is the statement 'I do not know'. The person who cannot make that statement is one who will never learn anything."</p>
-        <footer>Keith R.A. DeCandido</footer>
+        <p>"Science is a method for asking awkward questions and subjecting them to a reality-check, thus avoiding the human tendency to believe whatever makes us feel good."</p>
+        <footer>~ Terry Pratchett ~</footer>
       </div>
     </div> <!--end sidebar-->
 
