--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="row quotebar">
           <p>"The beginning of wisdom is the statement 'I do not know'. The person who cannot make that statement is one who will never learn anything."</p>
-          <footer>Keith R.A. DeCandido</footer>
+          <footer>~ Keith R.A. DeCandido ~</footer>
         </div>
     </div>
 
