added contact info links + extra quotes for pages

--- a/hobbies.html
+++ b/hobbies.html
@@ -42,12 +42,10 @@
       </a>
 
       <div class="row quotebar">
-        <p>"For small creatures such as we, the vastness is bearable only through love."</p>
-        <footer>~ Carl Sagan ~</footer>
+        <p>"It's amazing how much trouble you can get in when you don't have anything else to do."</p>
+        <footer>~ Quincy Jones ~</footer>
       </div>
     </div> <!--end sidebar-->
-
-
 
 
 
