Very minor fixes to inheritance errors. Font colors, etc. Only need to populate Education list, then done

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <li>Function: Web Scraper</li>
               <li>Purpose: Client requires job post logs for Title 9 compliance research</li>
               <li>Known Bugs: Infinte-loop crash</li>
-              <li>Being Supported: YES</li>
+              <li>Deprecated:: NO</li>
             </ul>
           </div>
         </a>
@@ -81,7 +81,7 @@
               <li>Function: Flashcard App</li>
               <li>Purpose: Pet project to help teach me python</li>
               <li>Known Bugs: Some dictionary entries need editing</li>
-              <li>Being Supported: YES</li>
+              <li>Deprecated:: NO</li>
             </ul>
           </div>
         </a>
@@ -94,7 +94,7 @@
               <li>Function: Web Presence</li>
               <li>Purpose: Epicodus W1 Code Review project</li>
               <li>Known Bugs: N/A</li>
-              <li>Being Supported: YES</li>
+              <li>Deprecated:: NO</li>
             </ul>            
           </div>
         </a>
